Breadcrumb: Fix z-index issue

--- a/src/scss/kitchensink/_breadcrumbs.scss
+++ b/src/scss/kitchensink/_breadcrumbs.scss
@@ -56,7 +56,7 @@
       display: inline-block;
       padding-right: 20px;
       position: relative;
-      z-index: 12;
+      z-index: 2;
     }
   }
   > li:first-child {
